--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
 
 * {
   margin: 0;
+  box-sizing: border-box;
 }
+
 body {
   background-color: rgba(245, 248, 255, 1);
 }
@@ -280,20 +282,28 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  max-width: 830px;
+  width: 100%;
   gap: 0;
+  margin: 0;
+  padding: 0;
 }
 .join-title {
   color: #ffffff;
+  width: 100%;
+  text-align: center;
 }
 
-.join-input input {
+.input-field input {
   border: none;
-  padding: 1rem 33.75rem 1rem 1.25rem;
   color: rgba(0, 0, 0, 0.5);
   text-align: left;
+  width: 100%;
+  max-width: 640px;
+  padding: 1rem;
 }
 
-.join-button button {
+.input-field button {
   background-color: #e95a08;
   border: none;
   padding: 1rem 3.125rem;
@@ -306,11 +316,13 @@ body {
   justify-content: center;
   align-items: center;
   gap: 1.5rem;
+  height: 141px;
+  max-width: 830px;
 }
 
 @media screen and (max-width: 576px) {
   .join {
-    max-width: 393px;
+    max: width 100vw;
     margin: 0 auto 0.5px;
     height: 276px;
     display: flex;
@@ -328,12 +340,19 @@ body {
     height: 100%;
     width: 100%;
   }
+  .input-field button {
+    max-width: 103px;
+    padding: 16px 20px;
+  }
   .input-field {
+    width: 100%;
+    max-width: calc(100vw - 32px);
     font-size: 16px;
   }
   .join-info {
     border: none;
-    width: 321px;
+    width: 100%;
+    max-width: calc(100vw - 32px);
     text-align: center;
   }
 }
